@startuml
title test
CalcCartridge <|-- ColorData
CalcCartridge <|-- PenData
CalcCartridge <|-- Filereader
Filereader <|-- PenData

class CalcCartridge{
    calclist
    usedlist
    show()
}


class PenData{
    pen_code
    limit
}

class ColorData{
    color_num
}

class Filereader{
    filename
    filedatalist
    setFileDataList()
    getFileName()
}

@enduml